<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.simutech.landry.stechphone.MainActivity"
    android:id="@+id/relay"
    >

    <TextView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/Ttime"
        android:text="@string/temp"
        android:textSize="80sp"
        android:paddingTop="50dp"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/dbmValue"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:background="@color/start"
            android:id="@+id/btnstart"
            />

        <Button
            android:layout_width="0dip"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:background = "@color/stop"
            android:text="@string/stop"
            android:id="@+id/btnStop" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/Lcontrol"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="0dip"
            android:layout_weight="0.29"
            android:layout_height="wrap_content"
            android:background="@color/normal"
            android:text="@string/pause"
            android:id="@+id/btnpause" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.41"
            android:layout_height="wrap_content"
            android:text="@string/envoyer"
            android:id="@+id/btnsend"
            android:background="@color/colorPrimary" />

        <Button
            android:layout_width="0dip"
            android:layout_weight="0.29"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:id="@+id/btnChange"
            android:background="@color/normal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_alignEnd="@+id/linearLayout2"
        android:id="@+id/dbmValue"

        android:layout_alignParentStart="true"
        android:layout_below="@+id/Ttime">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="wrap_content"
            android:text="@string/statut_sims_1"
            android:id="@+id/dbm1" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="wrap_content"
            android:text="@string/statut_sim_2"
            android:id="@+id/dbm2" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/linearLayout3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/radio"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/radio4G"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_4g"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/radio3G"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_3g"
                    android:onClick="onRadioButtonClicked"
                    />
                <RadioButton android:id="@+id/radio2G"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2g"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>
        </TableRow>
    </TableLayout>

    <EditText
        android:editable="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_above="@+id/linearLayout3"
        android:layout_alignParentStart="true"
        android:text="@string/techno_text"
        android:layout_alignEnd="@+id/Lcontrol"
        android:inputType="none" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
